<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.item.AddExpendFragment">

    <LinearLayout
        android:id="@+id/linear_layout_add_expend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginVertical="21dp"
        android:layout_marginHorizontal="32dp"
        android:padding="12dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_add_expend_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:paddingVertical="15dp"
            android:textColor="@color/black"
            android:text="选择支出类型"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_text_add_expend_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="number"
            android:gravity="end"
            android:hint="输入金额"
            android:paddingVertical="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/keyBoard">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:id="@+id/button_time"
            android:layout_weight="1"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:text="时间"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/Theme.MyAccount.Custom"
            android:paddingHorizontal="15dp"
            android:background="@color/white"
            android:id="@+id/button_remark"
            android:layout_weight="15"
            android:hint="备注"
            android:gravity="center_vertical"
            android:layout_marginEnd="15dp" />

    </LinearLayout>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keyBackground="@color/white"
        android:keyTextColor="@color/black"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:shadowColor="@color/white"
        android:shadowRadius="0.0"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </android.inputmethodservice.KeyboardView>

    <ImageButton
        android:id="@+id/button_add_expend_foods"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/foods"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_add_expend" />

    <ImageButton
        android:id="@+id/button_add_expend_debt"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/debt"
        app:layout_constraintLeft_toRightOf="@id/button_add_expend_foods"
        app:layout_constraintRight_toLeftOf="@id/button_add_expend_supplies"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_add_expend" />

    <ImageButton
        android:id="@+id/button_add_expend_supplies"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/supplies"
        app:layout_constraintLeft_toRightOf="@id/button_add_expend_debt"
        app:layout_constraintRight_toLeftOf="@id/button_add_expend_shopping"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_add_expend" />

    <ImageButton
        android:id="@+id/button_add_expend_shopping"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/shopping"
        app:layout_constraintLeft_toRightOf="@id/button_add_expend_supplies"
        app:layout_constraintRight_toLeftOf="@id/button_add_expend_sports"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_add_expend" />

    <ImageButton
        android:id="@+id/button_add_expend_sports"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/sports"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_add_expend" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="5dp"
        android:text="@string/foods"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_expend_foods" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/debt"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/textView2"
        app:layout_constraintRight_toLeftOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/button_add_expend_debt" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/supplies"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/textView3"
        app:layout_constraintRight_toLeftOf="@id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/button_add_expend_supplies" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/shopping"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/textView4"
        app:layout_constraintRight_toLeftOf="@id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/button_add_expend_shopping" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="5dp"
        android:text="@string/sports"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_expend_sports" />

    <ImageButton
        android:id="@+id/button_add_expend_call_credit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/call_credit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageButton
        android:id="@+id/button_add_expend_traffic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/traffic"
        app:layout_constraintLeft_toRightOf="@id/button_add_expend_call_credit"
        app:layout_constraintRight_toLeftOf="@id/button_add_expend_party"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/button_add_expend_party"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/party"
        app:layout_constraintLeft_toRightOf="@id/button_add_expend_traffic"
        app:layout_constraintRight_toLeftOf="@id/button_add_expend_housing"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/button_add_expend_housing"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/housing"
        app:layout_constraintLeft_toRightOf="@id/button_add_expend_party"
        app:layout_constraintRight_toLeftOf="@id/button_add_expend_medical"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/button_add_expend_medical"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/medical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="5dp"
        android:text="@string/call_credit"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add_expend_call_credit" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/traffic"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/textView7"
        app:layout_constraintRight_toLeftOf="@id/textView9"
        app:layout_constraintTop_toBottomOf="@id/button_add_expend_traffic" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/party"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/textView8"
        app:layout_constraintRight_toLeftOf="@id/textView10"
        app:layout_constraintTop_toBottomOf="@id/button_add_expend_party" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:text="@string/housing"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/textView9"
        app:layout_constraintRight_toLeftOf="@id/textView11"
        app:layout_constraintTop_toBottomOf="@id/button_add_expend_housing" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="5dp"
        android:text="@string/medical"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add_expend_medical" />


    <ImageButton
        android:id="@+id/button_add_expend_gift"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/gift"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ImageButton
        android:id="@+id/button_add_expend_others"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/others"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="5dp"
        android:text="@string/gift"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add_expend_gift" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="5dp"
        android:text="@string/others"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add_expend_others" />

</androidx.constraintlayout.widget.ConstraintLayout>