<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.item.AddIncomeFragment">

    <LinearLayout
        android:id="@+id/linear_layout_add_income"
        android:layout_width="420dp"
        android:layout_height="75dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="21dp"
        android:layout_marginBottom="36dp"
        android:background="@color/purple1"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/button_add_income_salary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,NotSibling">

        <TextView
            android:id="@+id/text_view_add_income_record"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:paddingVertical="15dp"
            android:text="选择收入类型"
            android:textColor="@color/black"
            android:textColorHighlight="@color/button"
            android:textColorLink="@color/purple1"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/edit_text_add_income_num"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="0.00"
            android:inputType="number"
            android:paddingVertical="1dp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/keyBoard">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:id="@+id/button_time"
            android:paddingHorizontal="12dp"
            android:drawableStart="@drawable/ic_menu_slideshow"
            android:drawablePadding="8dp"
            android:textSize="12sp"
            android:text="时间"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:id="@+id/edit_text_remark"
            android:textSize="12sp"
            android:layout_weight="12"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:hint="备注"
            android:gravity="center_vertical"
            android:paddingHorizontal="15dp"
            />

    </LinearLayout>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyBoard"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/background"
        android:keyBackground="@color/background"
        android:keyTextColor="@color/purple1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:shadowColor="@color/background"
        android:shadowRadius="0.0"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    </android.inputmethodservice.KeyboardView>


    <ImageButton
        android:id="@+id/button_add_income_salary"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/salary"        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_add_income"/>
    <ImageButton
        android:id="@+id/button_add_income_red_packet"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/red_packet"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toRightOf="@id/button_add_income_salary"
        app:layout_constraintRight_toLeftOf="@id/button_add_income_fund"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_add_income"/>
    <ImageButton
        android:id="@+id/button_add_income_fund"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/fund"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toRightOf="@id/button_add_income_red_packet"
        app:layout_constraintRight_toLeftOf="@id/button_add_income_others"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_add_income"/>
    <ImageButton
        android:id="@+id/button_add_income_others"
        android:layout_height="50dp"
        android:layout_width="50dp"
        android:layout_marginHorizontal="100dp"
        android:scaleType="fitXY"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/others"
        android:layout_marginTop="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_add_income" />
    <TextView
        android:id="@+id/text_view1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/salary"
        android:paddingVertical="5dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/button_add_income_salary"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/red_packet"
        android:paddingVertical="5dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/button_add_income_red_packet"
        app:layout_constraintLeft_toRightOf="@id/text_view1"
        app:layout_constraintRight_toLeftOf="@+id/text_view3"/>
    <TextView
        android:id="@+id/text_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:text="@string/fund"
        android:paddingVertical="5dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/button_add_income_fund"
        app:layout_constraintLeft_toRightOf="@id/text_view2"
        app:layout_constraintRight_toLeftOf="@id/text_view4"/>
    <TextView
        android:id="@+id/text_view4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:text="@string/others"
        android:paddingVertical="5dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/button_add_income_others"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
